<resources>
    <string name="app_name">SportBet Buddy</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="notifications_title">Occurring</string>

    <!-- Sync Preferences -->
    <string name="result_based_notifications">Result based notifications</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="rbn_summary_on">
        Notifications may be sent after conclusion of an event with an earlier bet placed.
    </string>
    <string name="rbn_summary_off">Notifications will not be sent after conclusion of events</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="results">Results</string>
    <string name="upcoming">Upcoming</string>
    <string name="join">Join</string>
    <string name="create_league">Create a new league</string>
    <string name="enter_code">Enter league code here</string>
    <string name="code_placeholder">Code placeholder</string>
    <string name="name_placeholder">Name placeholder</string>
    <string name="quit_league">Quit the league</string>
    <string name="insert_league_name">Your league\'s name</string>
    <string name="create">Create</string>
    <string name="settings">Settings</string>
    <string name="games">Games</string>
    <string name="leagues">Leagues</string>
    <string name="stats">Stats</string>
    <string name="upcoming_games">Upcoming</string>
    <string name="results_games">Results</string>
    <string name="draw">Draw</string>
    <string name="account">Account</string>
    <string name="notif_schedule_time">Notifications\' planned occurrence time</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="register">Register</string>
    <string name="not_created">Account wasn\'t created</string>
    <string name="created">Account was created</string>
    <string name="user_login">User Login</string>
    <string name="logout">Logout</string>
    <string name="u_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nickname">Nickname</string>
    <string name="repeat_password">Repeat password</string>
</resources>