<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="Notifications"
        app:icon="@drawable/ic_notifications">

        <SwitchPreferenceCompat
            app:key="noti_res"
            app:title="@string/result_based_notifications"
            app:defaultValue="true"
            app:summaryOn="@string/rbn_summary_on"
            app:summaryOff="@string/rbn_summary_off"
            />

        <ListPreference
            app:dependency="noti_res"
            app:defaultValue="Everyday"
            app:entries="@array/notifications_values"
            app:entryValues="@array/notifications_values"
            app:key="noti_occur"
            app:title="@string/notifications_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
</PreferenceScreen>